<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_sweeper_battery</name>
  <version>0.1.0</version>
  <description>Daly BMS battery interface for AMR sweeper over classic CAN (ROS 2).</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>python3-can</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
